docs/tutorial/tests/testdemo/check-tainting.0.expected

clean:

check-tainting:
Created dir: /home/mernst/research/types/checker-framework-fork-mernst-branch-formatting/docs/tutorial/src/personalblog-demo/bin
Compiling 2 source files to /home/mernst/research/types/checker-framework-fork-mernst-branch-formatting/docs/tutorial/src/personalblog-demo/bin
javac 17.0.5
/home/mernst/research/types/checker-framework-fork-mernst-branch-formatting/docs/tutorial/src/personalblog-demo/src/net/eyde/personalblog/service/PersonalBlogService.java:162: error: [argument] incompatible argument for parameter query of executeQuery.
                + "%' order by post.created desc");
                  ^
  found   : @Tainted String
  required: @Untainted String
1 error

BUILD FAILED
/home/mernst/research/types/checker-framework-fork-mernst-branch-formatting/docs/tutorial/src/personalblog-demo/build.xml:33: Compile failed; see the compiler error output for details.

Total time: 1 second
